@@ -3,6 +3,10 @@ Changelog
 
 4.4-dev - (unreleased)
 ----------------------
+* Change: do not show duplicates of sparql and json data when adding existing
+  data. show only last version. Upgrade step (not needed for EEA production):
+  ZMI > portal_setup > profile "EEA Daviz" > import Possible relations settings
+  [demarant #5003]
 * Feature: Refactoring to be able to use eea.googlecharts or eea.exhibit as
   standalone packages or as part of eea.daviz visualization bundle.
   [voineali #4996]
